# APEX-Asia-Property-EXchange

./: .cursor  .editorconfig  .env.staging  .gitignore  .pre-commit-config.yaml  CODEOWNERS  CREATE_PR_INSTRUCTIONS.md  GITHUB_REFACTORING_REPORT.md  LOCAL_TESTING_REPORT.md  Makefile  PORTAINER_FIX_REPORT.md  README-CI-CD.md  README.md  SECURITY_AUDIT_REPORT.md  TEST_CI_CD.md  development.env  docker-compose.local.yml  docker-compose.prod.yml  docker-compose.production.yml  docker-compose.staging.yml  docker-compose.yml  env.example  portainer-staging.env  staging.env
.cursor/: rules.md
.devloop/: config.yaml
.github/: variables.env
admin_panel/: ADMIN_PANEL_REPORT.md  Dockerfile  Makefile  README.md  env.example  manage.py  requirements.txt  tests.py
backend/: .coveragerc  Dockerfile  Makefile  README.md  alembic.ini  docker-entrypoint.sh  env.example  pyproject.toml  pytest.ini  requirements-current.txt  requirements.txt  security-report.txt  test.env  test_basic.py  test_config.py
backend/alembic/: env.py
backend/alembic/versions/: 196dfdb50f6c_initial_migration.py  20240101000000_add_amocrm_tokens.py  20250101000000_add_test_table.py
backend/app/: main.py
backend/app/analytics/: metrics.py
backend/app/api/: analytics.py  auth.py  auth_v2.py  leads.py  leads_v2.py  notifications.py  webhooks.py
backend/app/core/: config.py  db.py  dependencies.py  exceptions.py  logging.py  middleware.py  retry.py  security.py  utils.py
backend/app/integrations/amo/: auth.py  client.py
backend/app/integrations/email/: client.py
backend/app/integrations/telegram/: client.py
backend/app/integrations/whatsapp/: client.py
backend/app/models/: __init__.py  amocrm_token.py  deal.py  lead.py  notification.py  user.py
backend/app/schemas/: __init__.py  analytics.py  auth.py  leads.py  notifications.py
backend/app/services/: __init__.py  analytics_service.py  auth_service.py  lead_service.py  notification_service.py
backend/docs/: MIGRATIONS.md
backend/scripts/: create_migration.py  init_db.py  run_migrations.py
backend/tests/: test_security.py
backend/tests/integration/: test_api.py
backend/tests/performance/: test_performance.py
backend/tests/unit/: test_services.py  test_webhooks.py
docs/: CHANGELOG.md  CICD_REORGANIZATION.md  DEPLOYMENT_REPORT.md  FINAL-REPORT.md  FRONTEND_HEALTHCHECK_FIX.md  FUNCTIONALITY_ANALYSIS.md  MERGE_REPORT.md  MERGE_REPORT_FINAL.md  PORTAINER_DEPLOYMENT_GUIDE.md  PORTAINER_FIX_REPORT.md  PORTS_CONFIGURATION.md  PROJECT_ROOT_STRUCTURE.md  README.md  REFACTORING_REPORT.md  REPORTS_SETUP_REPORT.md  ROOT_OVERVIEW.md  SECURITY.md  SECURITY_BEST_PRACTICES.md  SECURITY_FIX_PLAN.md  SECURITY_FIX_SUMMARY.md  STAGING_SETUP_REPORT.md  amocrm-setup.md  pipelines.md  project-structure.md  test-plan.md  webhook-quickstart.md
frontend/: .eslintrc.json  (+7 more)
(+103 files in other folders)
